# covid19-data-visualisation

./: .gitignore  Procfile  README.md  dashboard.py  dashboard_main.py  pyproject.toml  requirements.txt  visualise_country.py  visualise_nation_data.py  visualise_region_data.py
src/: dashboard.py
src/fetch/: get_population.py  visualise_country.py  visualise_nation_data.py  visualise_region_data.py
src/frontend/layout/: borough_cum_case.py  borough_daily_case.py  main.py  uk_nation.py
src/frontend/plot/: borough_case.py  countries_case.py  uk_latest_cases.py  vaccinated.py
src/toolbox/: SignalProcessing.py
