[tool.poetry]
name = "covid19-data"
version = "0.1.0"
description = ""
authors = ["Jonathan Chow <jonathan@cychow.co.uk"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.19.2"
uk-covid19 = "^1.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
