[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Jonathan Chow <jonathan@cychow.co.uk>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.19.2"
uk-covid19 = "^1.2.2"
plotly = "^4.11.0"
pandas = "^1.1.3"
gunicorn = "^20.0.4"
dash = "^1.17.0"
xlrd = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
dashboard = "src.dashboard:start"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
